--- a/public/index.html
+++ b/public/index.html
@@ -470,6 +470,13 @@
     <div id="toast" class="toast">
       <span id="toast-message"></span>
     </div>
+
+    <!-- Version Footer -->
+    <footer class="version-footer">
+      <span>D&S Expense Tracker v1.2.0</span>
+      <span>•</span>
+      <span>Updated: Dec 22, 2024</span>
+    </footer>
   </div>
 
   <script src="/js/app.js"></script>
