Add Travel Advance category and dynamic Source/Where label for income/expense

--- a/public/index.html
+++ b/public/index.html
@@ -166,10 +166,10 @@
               </select>
             </div>
 
-            <!-- Merchant/Location suggestions (learns from past transactions) -->
+            <!-- Merchant/Location/Source suggestions (learns from past transactions) -->
             <div class="merchant-section" id="merchant-section" style="display: none;">
               <div class="form-group">
-                <label for="transaction-merchant">Where? (optional)</label>
+                <label for="transaction-merchant" id="merchant-label">Where? (optional)</label>
                 <div class="merchant-input-wrapper">
                   <input type="text" id="transaction-merchant" placeholder="e.g., Big Bazaar, Amazon..."
                     autocomplete="off">
@@ -475,7 +475,7 @@
     <footer class="version-footer">
       <span>D&S Expense Tracker v1.2.0</span>
       <span>•</span>
-      <span>Updated: Dec 22, 2024</span>
+      <span>Updated: Dec 24, 2024</span>
     </footer>
   </div>
 
