Add Bank Transfer payment mode for income transactions

--- a/public/index.html
+++ b/public/index.html
@@ -186,6 +186,7 @@
               <select id="payment-mode" class="category-select">
                 <option value="cash">💵 Cash</option>
                 <option value="upi">📱 UPI</option>
+                <option value="bank_transfer">🏛️ Bank Transfer</option>
                 <option value="credit_card">💳 Credit Card</option>
                 <option value="debit_card">🏦 Debit Card</option>
               </select>
